appId: br.com.foxbit.foxbitandroid
---
- launchApp:
    clearState: true
- assertVisible:
    id: "bt_welcome_login"
- tapOn:
    id: "bt_welcome_login"
- assertVisible:
    id: "inp_login_email"
- tapOn:
    id: "inp_login_email"
- inputText: "testecadastro200@hotmail.com"
- assertVisible:
    id: "inp_login_password"
- tapOn:
    id: "inp_login_password"
- inputText: "ISS.1@qa"
- assertVisible:
    id: "bt_login_eye"
- tapOn:
    id: "bt_login_eye"

- assertVisible:
    id: "txt_login_welcome"
- assertVisible:
    id: "txt_login_welcome"
- tapOn:
    id: "bt_login_continue"

- tapOn:
    id: "bt_welcome_login"


- tapOn:
    id: "bt_welcome_login"

